Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/Custom_Login_Configuration__mdt.object-meta.xml
<CustomObject>
    <description
  >Used by the installed package called Configurable Self Registration &amp; Login For Experience Cloud to control the Login form fields.</description>
    <label>Custom Login Configuration</label>
    <pluralLabel>Custom Login Configuration</pluralLabel>
</CustomObject>