Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/fields/Field_Allow_Auto_Complete__c.field-meta.xml
<CustomField>
    <fullName>Field_Allow_Auto_Complete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Field Allow Auto Complete</label>
    <type>Checkbox</type>
</CustomField>