Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/fields/Field_Date_Style__c.field-meta.xml
<CustomField>
    <fullName>Field_Date_Style__c</fullName>
    <label>Field Date Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>short</fullName>
                <default>true</default>
                <label>short</label>
            </value>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>long</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>