Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/fields/Field_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Field_Help_Text__c</fullName>
    <label>Field Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>