Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/fields/Field_Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Icon_Name__c</fullName>
    <label>Field Icon Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>