Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/fields/Field_Message__c.field-meta.xml
<CustomField>
    <fullName>Field_Message__c</fullName>
    <description>Displayed if the REGEX pattern provided is not met.</description>
    <inlineHelpText>Displayed if the REGEX pattern provided is not met.</inlineHelpText>
    <label>Field REGEX Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>