Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/fields/Field_Message_Too_Long__c.field-meta.xml
<CustomField>
    <fullName>Field_Message_Too_Long__c</fullName>
    <description>Text is displayed if the field value entered is longer than the specified maximum.</description>
    <inlineHelpText>Text is displayed if the field value entered is longer than the specified maximum.</inlineHelpText>
    <label>Field Message Too Long</label>
    <length>255</length>
    <type>Text</type>
</CustomField>