Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description
  >Set this to the API Name of a field. NOTE: If invalid API Name, the field is ignored during form submission.</description>
    <inlineHelpText
  >Set this to the API Name of a field. NOTE: If invalid API Name, the field is ignored during form submission.</inlineHelpText>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>