Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/fields/Field_Over_Max_Range_Message__c.field-meta.xml
<CustomField>
    <fullName>Field_Over_Max_Range_Message__c</fullName>
    <description>Error message to be displayed when a date is after the max. date specified or number is higher than maximum specified.</description>
    <inlineHelpText>Error message to be displayed when a date is after the max. date specified or number is higher than maximum specified.</inlineHelpText>
    <label>Field Over Max Range Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>