Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/fields/Field_Parent_Class__c.field-meta.xml
<CustomField>
    <fullName>Field_Parent_Class__c</fullName>
    <label>Field Parent Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>