Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/fields/Field_Picklist_Options__c.field-meta.xml
<CustomField>
    <fullName>Field_Picklist_Options__c</fullName>
    <label>Field Picklist Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>