Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/fields/Field_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Field_Placeholder__c</fullName>
    <label>Field Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>