Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/fields/Field_Required__c.field-meta.xml
<CustomField>
    <fullName>Field_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Required</label>
    <type>Checkbox</type>
</CustomField>