Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/fields/Field_Required_Message__c.field-meta.xml
<CustomField>
    <fullName>Field_Required_Message__c</fullName>
    <label>Field Required Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>