Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/fields/Field_Show_Icon__c.field-meta.xml
<CustomField>
    <fullName>Field_Show_Icon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Show Icon</label>
    <type>Checkbox</type>
</CustomField>