Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/fields/Field_Under_Minimum_Range_Message__c.field-meta.xml
<CustomField>
    <fullName>Field_Under_Minimum_Range_Message__c</fullName>
    <description>Error message to be displayed when a date is before the min. date specified or number is lower than minimum specified.</description>
    <inlineHelpText>Error message to be displayed when a date is before the min. date specified or number is lower than minimum specified.</inlineHelpText>
    <label>Field Under Minimum Range Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>