Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/fields/Field_Validation_REGEX__c.field-meta.xml
<CustomField>
    <fullName>Field_Validation_REGEX__c</fullName>
    <label>Field Validation REGEX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>