Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/fields/Portal_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Portal_API_Name__c</fullName>
    <description>Specify the API Name by running the query: SELECT Id,Name,UrlPathPrefix FROM Site to link field configuration to a specific site, or set to &quot;ALL&quot; to display across sites where this component is used.</description>
    <inlineHelpText>Specify the API Name by running the query: SELECT Id,Name,UrlPathPrefix FROM Site to link field configuration to a specific site, or set to &quot;ALL&quot; to display across sites where this component is used.</inlineHelpText>
    <label>Portal API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>