Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/validationRules/Field_Label_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_Label_Required</fullName>
    <active>true</active>
    <description
  >Enforces that the user must populate a field label when the variant is set to &quot;standard&quot; or &quot;label-inline&quot;</description>
    <errorConditionFormula>AND(ISBLANK(Field_Label__c),
OR(
ISPICKVAL(Field_Label_Variant__c, &quot;standard&quot;),
ISPICKVAL(Field_Label_Variant__c, &quot;label-inline&quot;))
)</errorConditionFormula>
    <errorDisplayField>Field_Label__c</errorDisplayField>
    <errorMessage
  >A Field Label must be specified when using the &quot;standard&quot; or &quot;label-inline&quot; setting for Field Label Variant.</errorMessage>
</ValidationRule>