Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/validationRules/Field_Regex.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_Regex</fullName>
    <active>true</active>
    <description>Enforce the population of a Field Regex Message if Field Regex is populated.</description>
    <errorConditionFormula>AND(

ISBLANK(Field_Message__c), 
NOT(ISBLANK(Field_Validation_REGEX__c))

)</errorConditionFormula>
    <errorDisplayField>Field_Message__c</errorDisplayField>
    <errorMessage>Field Regex Message is also required when setting Field Validation REGEX.</errorMessage>
</ValidationRule>