Configurable Self Registration LWC/Custom Registration/force-app/main/default/objects/Custom_Login_Configuration__mdt/validationRules/Field_Too_Long.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_Too_Long</fullName>
    <active>false</active>
    <description
  >Enforce the population of a Field Too Long Message if Field Max Length is populated.</description>
    <errorConditionFormula>AND(

ISBLANK(Field_Message_Too_Long__c), 
NOT(ISBLANK(Field_Max_Length__c))

)</errorConditionFormula>
    <errorDisplayField>Field_Message_Too_Long__c</errorDisplayField>
    <errorMessage
  >Field Too Long Message is also required when setting Field Max Length.</errorMessage>
</ValidationRule>